// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Admin Page Visual Layout renders admin page layout correctly: admin-page-layout 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="flex items-center justify-center h-screen"
  >
    <p>
      Loading...
    </p>
  </div>
</div>
`;

exports[`Admin Page Visual Layout renders admin page with dashboard view: admin-page-dashboard 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="admin-dashboard-view"
  >
    <div
      class="flex items-center justify-center h-screen"
    >
      <p>
        Loading...
      </p>
    </div>
  </div>
</div>
`;

exports[`Admin Page Visual Layout renders admin page with settings panel: admin-page-settings 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="admin-settings-panel"
  >
    <div
      class="flex items-center justify-center h-screen"
    >
      <p>
        Loading...
      </p>
    </div>
  </div>
</div>
`;

exports[`Admin Page Visual Layout renders admin page with user management: admin-page-users 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="admin-user-management"
  >
    <div
      class="flex items-center justify-center h-screen"
    >
      <p>
        Loading...
      </p>
    </div>
  </div>
</div>
`;

exports[`Chat Page Visual Layout renders chat page basic layout correctly: chat-page-basic-layout 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="flex h-full items-center justify-center bg-gradient-to-br from-gray-50 via-white to-gray-50"
  >
    <div
      class="flex flex-col items-center gap-4"
    >
      <div
        class="h-8 w-8 animate-spin text-blue-600"
        data-icon="Loader2"
        data-testid="loader2-icon"
      />
      <div
        class="text-sm text-gray-600"
      >
        Loading chat...
      </div>
    </div>
  </div>
</div>
`;

exports[`Chat Page Visual Layout renders chat page with loading state: chat-page-loading-state 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="loading-state"
  >
    <div
      class="flex h-full items-center justify-center bg-gradient-to-br from-gray-50 via-white to-gray-50"
    >
      <div
        class="flex flex-col items-center gap-4"
      >
        <div
          class="h-8 w-8 animate-spin text-blue-600"
          data-icon="Loader2"
          data-testid="loader2-icon"
        />
        <div
          class="text-sm text-gray-600"
        >
          Loading chat...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Chat Page Visual Layout renders chat page with mobile viewport: chat-page-mobile-layout 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="mobile-viewport w-full max-w-sm"
  >
    <div
      class="flex h-full items-center justify-center bg-gradient-to-br from-gray-50 via-white to-gray-50"
    >
      <div
        class="flex flex-col items-center gap-4"
      >
        <div
          class="h-8 w-8 animate-spin text-blue-600"
          data-icon="Loader2"
          data-testid="loader2-icon"
        />
        <div
          class="text-sm text-gray-600"
        >
          Loading chat...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Chat Page Visual Layout renders chat page with sidebar collapsed: chat-page-sidebar-collapsed 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="chat-layout sidebar-collapsed"
  >
    <div
      class="flex h-full items-center justify-center bg-gradient-to-br from-gray-50 via-white to-gray-50"
    >
      <div
        class="flex flex-col items-center gap-4"
      >
        <div
          class="h-8 w-8 animate-spin text-blue-600"
          data-icon="Loader2"
          data-testid="loader2-icon"
        />
        <div
          class="text-sm text-gray-600"
        >
          Loading chat...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Corpus Page Visual Layout renders corpus page empty state: corpus-page-empty 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="corpus-empty-state"
  >
    <div
      class="flex items-center justify-center h-screen"
    >
      <p>
        Loading...
      </p>
    </div>
  </div>
</div>
`;

exports[`Corpus Page Visual Layout renders corpus page layout correctly: corpus-page-layout 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="flex items-center justify-center h-screen"
  >
    <p>
      Loading...
    </p>
  </div>
</div>
`;

exports[`Corpus Page Visual Layout renders corpus page with data grid: corpus-page-data-grid 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="corpus-data-grid"
  >
    <div
      class="flex items-center justify-center h-screen"
    >
      <p>
        Loading...
      </p>
    </div>
  </div>
</div>
`;

exports[`Corpus Page Visual Layout renders corpus page with search active: corpus-page-search 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="corpus-search-active"
  >
    <div
      class="flex items-center justify-center h-screen"
    >
      <p>
        Loading...
      </p>
    </div>
  </div>
</div>
`;

exports[`Dark Theme Page Layout Tests renders admin page in dark theme correctly: admin-page-dark-theme 1`] = `
<div
  class="dark"
>
  <div
    class="min-h-screen bg-background text-foreground"
  >
    <div
      class="flex items-center justify-center h-screen"
    >
      <p>
        Loading...
      </p>
    </div>
  </div>
</div>
`;

exports[`Dark Theme Page Layout Tests renders chat page in dark theme correctly: chat-page-dark-theme 1`] = `
<div
  class="dark"
>
  <div
    class="min-h-screen bg-background text-foreground"
  >
    <div
      class="flex h-full items-center justify-center bg-gradient-to-br from-gray-50 via-white to-gray-50"
    >
      <div
        class="flex flex-col items-center gap-4"
      >
        <div
          class="h-8 w-8 animate-spin text-blue-600"
          data-icon="Loader2"
          data-testid="loader2-icon"
        />
        <div
          class="text-sm text-gray-600"
        >
          Loading chat...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dark Theme Page Layout Tests renders demo page in dark theme correctly: demo-page-dark-theme 1`] = `
<div
  class="dark"
>
  <div
    class="min-h-screen bg-background text-foreground"
  >
    <div
      class="min-h-screen bg-gradient-to-br from-gray-50 to-gray-100 dark:from-gray-900 dark:to-black"
    >
      <div
        class="container mx-auto px-4 py-8 max-w-7xl"
      >
        <div
          data-testid="demo-header"
        >
          Demo Header
        </div>
        <div
          data-testid="demo-progress"
        >
          Demo Progress
        </div>
        <div
          data-testid="industry-selection"
        >
          Industry Selection
        </div>
        <div
          data-testid="demo-completion"
        >
          Demo Completion
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dark Theme Page Layout Tests renders login page in dark theme correctly: login-page-dark-theme 1`] = `
<div
  class="dark"
>
  <div
    class="min-h-screen bg-background text-foreground"
  >
    <div
      class="flex items-center justify-center h-screen"
    >
      <div
        class="text-center"
      >
        <h1
          class="text-4xl font-bold mb-8"
        >
          Netra
        </h1>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-primary text-primary-foreground hover:bg-primary/90 hover:shadow-lg h-11 rounded-md px-8"
        >
          Login with Google
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Demo Page Visual Layout renders demo page layout correctly: demo-page-layout 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="min-h-screen bg-gradient-to-br from-gray-50 to-gray-100 dark:from-gray-900 dark:to-black"
  >
    <div
      class="container mx-auto px-4 py-8 max-w-7xl"
    >
      <div
        data-testid="demo-header"
      >
        Demo Header
      </div>
      <div
        data-testid="demo-progress"
      >
        Demo Progress
      </div>
      <div
        data-testid="industry-selection"
      >
        Industry Selection
      </div>
      <div
        data-testid="demo-completion"
      >
        Demo Completion
      </div>
    </div>
  </div>
</div>
`;

exports[`Demo Page Visual Layout renders demo page tablet layout: demo-page-tablet 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="tablet-viewport w-full max-w-2xl"
  >
    <div
      class="min-h-screen bg-gradient-to-br from-gray-50 to-gray-100 dark:from-gray-900 dark:to-black"
    >
      <div
        class="container mx-auto px-4 py-8 max-w-7xl"
      >
        <div
          data-testid="demo-header"
        >
          Demo Header
        </div>
        <div
          data-testid="demo-progress"
        >
          Demo Progress
        </div>
        <div
          data-testid="industry-selection"
        >
          Industry Selection
        </div>
        <div
          data-testid="demo-completion"
        >
          Demo Completion
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Demo Page Visual Layout renders demo page with analytics sections: demo-page-analytics 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="demo-analytics-view"
  >
    <div
      class="min-h-screen bg-gradient-to-br from-gray-50 to-gray-100 dark:from-gray-900 dark:to-black"
    >
      <div
        class="container mx-auto px-4 py-8 max-w-7xl"
      >
        <div
          data-testid="demo-header"
        >
          Demo Header
        </div>
        <div
          data-testid="demo-progress"
        >
          Demo Progress
        </div>
        <div
          data-testid="industry-selection"
        >
          Industry Selection
        </div>
        <div
          data-testid="demo-completion"
        >
          Demo Completion
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Demo Page Visual Layout renders demo page with performance metrics: demo-page-metrics 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="performance-metrics-view"
  >
    <div
      class="min-h-screen bg-gradient-to-br from-gray-50 to-gray-100 dark:from-gray-900 dark:to-black"
    >
      <div
        class="container mx-auto px-4 py-8 max-w-7xl"
      >
        <div
          data-testid="demo-header"
        >
          Demo Header
        </div>
        <div
          data-testid="demo-progress"
        >
          Demo Progress
        </div>
        <div
          data-testid="industry-selection"
        >
          Industry Selection
        </div>
        <div
          data-testid="demo-completion"
        >
          Demo Completion
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid Layout Visual Tests renders content list layout correctly: content-list-layout 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="space-y-2"
  >
    <div
      class="flex items-center justify-between rounded-lg border p-4"
    >
      <span>
        Item 1
      </span>
      <button
        class="text-sm text-muted-foreground hover:text-foreground"
      >
        Action
      </button>
    </div>
    <div
      class="flex items-center justify-between rounded-lg border p-4"
    >
      <span>
        Item 2
      </span>
      <button
        class="text-sm text-muted-foreground hover:text-foreground"
      >
        Action
      </button>
    </div>
    <div
      class="flex items-center justify-between rounded-lg border p-4"
    >
      <span>
        Item 3
      </span>
      <button
        class="text-sm text-muted-foreground hover:text-foreground"
      >
        Action
      </button>
    </div>
    <div
      class="flex items-center justify-between rounded-lg border p-4"
    >
      <span>
        Item 4
      </span>
      <button
        class="text-sm text-muted-foreground hover:text-foreground"
      >
        Action
      </button>
    </div>
  </div>
</div>
`;

exports[`Grid Layout Visual Tests renders dashboard grid layout correctly: dashboard-grid-layout 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="grid gap-6 md:grid-cols-2 lg:grid-cols-3"
  >
    <div
      class="rounded-lg border bg-card p-4"
    >
      <h3
        class="font-semibold"
      >
        Metric 1
      </h3>
      <p
        class="text-2xl font-bold"
      >
        1,234
      </p>
    </div>
    <div
      class="rounded-lg border bg-card p-4"
    >
      <h3
        class="font-semibold"
      >
        Metric 2
      </h3>
      <p
        class="text-2xl font-bold"
      >
        5,678
      </p>
    </div>
    <div
      class="rounded-lg border bg-card p-4"
    >
      <h3
        class="font-semibold"
      >
        Metric 3
      </h3>
      <p
        class="text-2xl font-bold"
      >
        9,012
      </p>
    </div>
  </div>
</div>
`;

exports[`Layout Component Visual Tests renders footer layout correctly: footer-layout 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <footer
    class="border-t bg-muted/50"
  >
    <div
      class="container flex h-16 items-center justify-between text-sm text-muted-foreground"
    >
      <p>
        © 2025 Netra Apex. All rights reserved.
      </p>
      <div
        class="flex space-x-4"
      >
        <a
          href="/privacy"
        >
          Privacy
        </a>
        <a
          href="/terms"
        >
          Terms
        </a>
        <a
          href="/support"
        >
          Support
        </a>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Layout Component Visual Tests renders header layout correctly: header-layout 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <header
    class="border-b bg-background/95 backdrop-blur supports-[backdrop-filter]:bg-background/60"
  >
    <div
      class="container flex h-14 items-center justify-between"
    >
      <div
        class="flex items-center space-x-4"
      >
        <h1
          class="text-lg font-semibold"
        >
          Netra Apex
        </h1>
      </div>
      <nav
        class="flex items-center space-x-4"
      >
        <button
          class="text-sm"
        >
          Profile
        </button>
        <button
          class="text-sm"
        >
          Settings
        </button>
      </nav>
    </div>
  </header>
</div>
`;

exports[`Layout Component Visual Tests renders main content area layout correctly: main-content-layout 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <main
    class="flex-1 overflow-auto"
  >
    <div
      class="container mx-auto p-6"
    >
      <div
        class="mb-6"
      >
        <h1
          class="text-3xl font-bold"
        >
          Page Title
        </h1>
        <p
          class="text-muted-foreground"
        >
          Page description goes here
        </p>
      </div>
      <div
        class="grid gap-6"
      >
        <div
          class="rounded-lg border bg-card p-6"
        >
          <h2
            class="text-xl font-semibold mb-4"
          >
            Section Title
          </h2>
          <p>
            Section content goes here
          </p>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Layout Component Visual Tests renders sidebar navigation layout correctly: sidebar-navigation 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <aside
    class="w-64 border-r bg-background"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="p-4"
      >
        <h2
          class="text-lg font-semibold"
        >
          Navigation
        </h2>
      </div>
      <nav
        class="flex-1 space-y-1 p-4"
      >
        <a
          class="block px-3 py-2 rounded-md bg-muted"
          href="/chat"
        >
          Chat
        </a>
        <a
          class="block px-3 py-2 rounded-md"
          href="/demo"
        >
          Demo
        </a>
        <a
          class="block px-3 py-2 rounded-md"
          href="/corpus"
        >
          Corpus
        </a>
        <a
          class="block px-3 py-2 rounded-md"
          href="/admin"
        >
          Admin
        </a>
      </nav>
    </div>
  </aside>
</div>
`;

exports[`Login Page Visual Layout renders login page layout correctly: login-page-layout 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="flex items-center justify-center h-screen"
  >
    <div
      class="text-center"
    >
      <h1
        class="text-4xl font-bold mb-8"
      >
        Netra
      </h1>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-primary text-primary-foreground hover:bg-primary/90 hover:shadow-lg h-11 rounded-md px-8"
      >
        Login with Google
      </button>
    </div>
  </div>
</div>
`;

exports[`Login Page Visual Layout renders login page mobile layout: login-page-mobile 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="mobile-viewport w-full max-w-sm px-4"
  >
    <div
      class="flex items-center justify-center h-screen"
    >
      <div
        class="text-center"
      >
        <h1
          class="text-4xl font-bold mb-8"
        >
          Netra
        </h1>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-primary text-primary-foreground hover:bg-primary/90 hover:shadow-lg h-11 rounded-md px-8"
        >
          Login with Google
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Login Page Visual Layout renders login page with center alignment: login-page-centered 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="flex items-center justify-center min-h-screen"
  >
    <div
      class="flex items-center justify-center h-screen"
    >
      <div
        class="text-center"
      >
        <h1
          class="text-4xl font-bold mb-8"
        >
          Netra
        </h1>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-primary text-primary-foreground hover:bg-primary/90 hover:shadow-lg h-11 rounded-md px-8"
        >
          Login with Google
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Login Page Visual Layout renders login page with error state: login-page-error-state 1`] = `
<div
  class="min-h-screen bg-background text-foreground"
>
  <div
    class="error-state"
  >
    <div
      class="flex items-center justify-center h-screen"
    >
      <div
        class="text-center"
      >
        <h1
          class="text-4xl font-bold mb-8"
        >
          Netra
        </h1>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-200 ease-in-out transform hover:scale-[1.02] active:scale-[0.98] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer bg-primary text-primary-foreground hover:bg-primary/90 hover:shadow-lg h-11 rounded-md px-8"
        >
          Login with Google
        </button>
      </div>
    </div>
  </div>
</div>
`;
